[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quality-gate-agent"
version = "0.1.0"
description = "Turn quality gate failures into safe, reviewable AI remediation plans."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quality Gate Agent contributors" }]
dependencies = []

[project.scripts]
qga = "quality_gate_agent.cli:main"
quality-gate-agent = "quality_gate_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

